# smtc-suite

./: .gitignore  Cargo.toml  GEMINI.md  README.md  build.rs  cbindgen.toml
examples/: playback_mode_test.rs  session_listener.rs  session_viewer.rs  status_viewer.rs
include/: smtc_suite.h
src/: api.rs  audio_capture.rs  audio_session_monitor.rs  error.rs  ffi.rs  lib.rs  smtc_handler.rs  tasks.rs  utils.rs  volume_control.rs  worker.rs
tests/: e2e_playback.rs
