[package]
name = "smtc-suite"
version = "0.1.0"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "一个用于与 Windows 系统媒体控件 (SMTC) 和系统音频进行交互的 Rust 库。"
license = "MIT"
repository = "https://github.com/apoint123/smtc-suite"
readme = "README.md"
keywords = ["windows", "smtc", "audio", "media-control", "wasapi"]
categories = ["api-bindings", "multimedia::audio"]

[dependencies]
easer = "0.3"
ferrous-opencc = "*"
log = "0"
once_cell = "1"
rubato = "0.16"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

windows = { git = "https://github.com/microsoft/windows-rs.git", tag = "66", features = [
    "Media_Control",
    "Storage_Streams",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
]}
windows-future = { git = "https://github.com/microsoft/windows-rs.git", tag = "66" }