[package]
name = "smtc-suite"
version = "1.0.1"
edition = "2024"
authors = ["apoint123 <vpnzaph@outlook.com>"]
description = "一个用于与 Windows 系统媒体控件 (SMTC) 和系统音频进行交互的 Rust 库。"
documentation = "https://docs.rs/crate/smtc-suite"
license = "MIT"
repository = "https://github.com/apoint123/smtc-suite"
readme = "README.md"
keywords = ["windows", "smtc", "audio", "media-control", "wasapi"]
categories = ["api-bindings", "multimedia::audio"]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64 = "0.22.1"
easer = "0.3"
env_logger = "0.11.8"
ferrous-opencc = "0"
log = "0"
rubato = "0.16"
serde = "1.0.219"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

windows = { version = "0.61", features = [
    "Media_Control",
    "Storage_Streams",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
]}
windows-future = { version = "0.2" }

[build-dependencies]
cbindgen = "0.29.0"
